<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="arteam.anytimerecord.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_tap_for_detail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/ext_color"
            android:clickable="true"
            android:gravity="center"
            android:padding="@dimen/layout_margin_16dp"
            android:text="@string/tap_for_detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_16dp"
            android:layout_marginRight="@dimen/layout_margin_16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/layout_margin_16dp"
                android:text="@string/ll_category" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="@dimen/layout_margin_16dp"
                android:text="@string/ll_money" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/layout_margin_16dp"
            android:layout_marginRight="@dimen/layout_margin_16dp"
            android:background="?android:attr/listDivider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin_16dp"
            android:scrollbars="vertical" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
